[gd_scene load_steps=12 format=3 uid="uid://ckgvr84ono8yc"]

[ext_resource type="Script" uid="uid://dk344ene1mq6p" path="res://scenes/enemy_3.gd" id="1_7nfes"]
[ext_resource type="Texture2D" uid="uid://cwjnst8r15egd" path="res://assets/Character_animation/GRP_CHARAC/ikatlong_halimaw_traballogear5/frame 1.png" id="1_uj3uc"]
[ext_resource type="Texture2D" uid="uid://bnupgl1k80suq" path="res://assets/Character_animation/GRP_CHARAC/ikatlong_halimaw_traballogear5/frame 2.png" id="2_7nfes"]
[ext_resource type="Texture2D" uid="uid://d20qu0gprwucm" path="res://assets/Character_animation/GRP_CHARAC/ikatlong_halimaw_traballogear5/frame 3.png" id="3_7ipwp"]
[ext_resource type="Texture2D" uid="uid://div6e1qu4owaj" path="res://assets/Character_animation/GRP_CHARAC/ikatlong_halimaw_traballogear5/frame 4.png" id="4_v1mu1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cwep3"]
atlas = ExtResource("1_uj3uc")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfosb"]
atlas = ExtResource("2_7nfes")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_25yel"]
atlas = ExtResource("3_7ipwp")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_coowh"]
atlas = ExtResource("4_v1mu1")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_fns3h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwep3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfosb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25yel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_coowh")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ipwp"]
size = Vector2(57, 113)

[node name="enemy3" type="Node2D"]
z_index = 3
script = ExtResource("1_7nfes")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1.2999977, 0)
scale = Vector2(0.7406249, 0.7)
sprite_frames = SubResource("SpriteFrames_fns3h")
autoplay = "default"
frame_progress = 0.8428024

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, -14.5)
shape = SubResource("RectangleShape2D_7ipwp")

[node name="RayCastUp" type="RayCast2D" parent="."]
target_position = Vector2(0, -37)

[node name="RayCastDown" type="RayCast2D" parent="."]
target_position = Vector2(1, 16)

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
